--- a/CarPoolPrototype5/Base.lproj/Main.storyboard
+++ b/CarPoolPrototype5/Base.lproj/Main.storyboard
@@ -242,12 +242,101 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="KDe-YE-tgE" kind="relationship" relationship="rootViewController" id="zFM-iu-79D"/>
+                        <segue destination="SUa-2E-MW2" kind="relationship" relationship="rootViewController" id="rt0-eq-1tj"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="drK-wu-RIr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1744" y="2338"/>
+        </scene>
+        <!--Browse Trips Table View Controller - Browse-->
+        <scene sceneID="GyX-va-ehQ">
+            <objects>
+                <tableViewController id="SUa-2E-MW2" customClass="BrowseTripsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="115" sectionHeaderHeight="22" sectionFooterHeight="22" id="8yb-gK-cfa">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BrowseTripsTableViewCell" rowHeight="115" id="1jZ-lq-4F5" customClass="BrowseTripsTableViewCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="115"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1jZ-lq-4F5" id="Uyx-Bv-iZH">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="114"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background_page_white_1136x640.png" translatesAutoresizingMaskIntoConstraints="NO" id="7be-Pl-2YV">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Igd-uM-kgX">
+                                            <rect key="frame" x="20" y="20" width="247" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.0" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GH5-lf-YXl">
+                                            <rect key="frame" x="20" y="41" width="247" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bIs-R6-mGz">
+                                            <rect key="frame" x="20" y="78" width="247" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6I4-iv-Jpw">
+                                            <rect key="frame" x="20" y="62" width="247" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="bIs-R6-mGz" id="0sm-b0-p7D"/>
+                                    <outlet property="descriptionLabel" destination="6I4-iv-Jpw" id="U2u-Zg-BFn"/>
+                                    <outlet property="fromLabel" destination="Igd-uM-kgX" id="nPM-in-dnr"/>
+                                    <outlet property="toLabel" destination="GH5-lf-YXl" id="bdd-7e-TkR"/>
+                                    <segue destination="O0E-lP-gP8" kind="push" id="HR8-j9-JEo"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="SUa-2E-MW2" id="7CD-Ed-Ncc"/>
+                            <outlet property="delegate" destination="SUa-2E-MW2" id="69F-FJ-3fa"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Browse" id="fUd-oR-gTE"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Ib-6B-1Mi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2291" y="2338"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="CRk-9H-PNv">
+            <objects>
+                <viewController id="O0E-lP-gP8" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rjp-UJ-Juv"/>
+                        <viewControllerLayoutGuide type="bottom" id="7o6-p6-jmc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5af-0I-1sn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xxc-ng-JkI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OzJ-ZA-L1u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2764" y="2338"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="E7e-Tq-4Wy">
@@ -740,7 +829,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wLx-jt-wWG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2268" y="2338"/>
+            <point key="canvasLocation" x="2244" y="3038"/>
         </scene>
         <!--View Controller - Trip Details-->
         <scene sceneID="ZfW-RM-GBm">
@@ -901,7 +990,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i1N-md-cjZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2731" y="2338"/>
+            <point key="canvasLocation" x="2707" y="3038"/>
         </scene>
         <!--View Controller - Join Trip-->
         <scene sceneID="JKJ-XO-kkH">
@@ -969,7 +1058,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B0D-cU-2un" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3652" y="2338"/>
+            <point key="canvasLocation" x="3628" y="3038"/>
         </scene>
         <!--Map View Controller - Route Map-->
         <scene sceneID="KUu-Q7-Hdv">
@@ -1013,7 +1102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YAs-ym-y83" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4079" y="2338"/>
+            <point key="canvasLocation" x="4055" y="3038"/>
         </scene>
         <!--View Controller - Profile-->
         <scene sceneID="peo-I7-GWR">
@@ -1073,7 +1162,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9I3-sp-Yky" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3170" y="2338"/>
+            <point key="canvasLocation" x="3146" y="3038"/>
         </scene>
         <!--View Controller - My Trips-->
         <scene sceneID="Ufv-4v-c1q">
@@ -1866,6 +1955,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="Person1.png" width="256" height="256"/>
         <image name="Person3.png" width="600" height="601"/>
         <image name="background_page1_1136x640.png" width="640" height="1136"/>
+        <image name="background_page_white_1136x640.png" width="640" height="1136"/>
         <image name="browse-icon.png" width="640" height="640"/>
         <image name="mytrips-icon.png" width="640" height="640"/>
         <image name="profile_icon.png" width="640" height="640"/>
@@ -1882,7 +1972,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <segue reference="6uo-th-xLc"/>
         <segue reference="4iD-3v-Tyb"/>
         <segue reference="JR2-H7-LvK"/>
-        <segue reference="aye-xR-dhz"/>
         <segue reference="4X8-OV-57M"/>
         <segue reference="FeQ-Ec-a9x"/>
         <segue reference="zbf-aH-P4J"/>
